testsuite/tests/tlks/should_fail/tlks_fail008.stderr

tlks_fail008.hs:9:1: error:
    • Not a function kind: *
      but extra binders found: x1 (x2 :: Type -> Type)
    • In the data type declaration for ‘T’
